--- a/AmDataVizDemo/Views/_ViewImports.cshtml
+++ b/AmDataVizDemo/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using MvcExample
-@using MvcExample.Models
+﻿@using AmDataVizDemo
+@using AmDataVizDemo.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
