Add simple forecasting example using Microsoft.ML

--- a/AmDataVizDemo/Views/Home/Index.cshtml
+++ b/AmDataVizDemo/Views/Home/Index.cshtml
@@ -3,11 +3,12 @@
 }
 
     <!-- Tab links -->
-    <div class="tab">
-        <button class="tablinks" data-content="bar-chart-tabcontent">Bar Graph</button>
-        <button class="tablinks" data-content="line-chart-tabcontent">Line Graph</button>
-        <button class="tablinks" data-content="box-plot-tabcontent">Box Plot</button>
-    </div>
+<div class="tab">
+    <button class="tablinks" data-content="bar-chart-tabcontent">Bar Graph</button>
+    <button class="tablinks" data-content="line-chart-tabcontent">Line Graph</button>
+    <button class="tablinks" data-content="box-plot-tabcontent">Box Plot</button>
+    <button class="tabforecast" id="forecast-arima" data-content="forecast-tabcontent">Forecast</button>
+</div>
 
     <!-- Tab content -->
     <div id="bar-chart-tabcontent" class="tabcontent hidden">
