updated DashboardPage with icons and info

--- a/AmDataVizDemo/Views/Home/Dashboard.cshtml
+++ b/AmDataVizDemo/Views/Home/Dashboard.cshtml
@@ -16,7 +16,7 @@
         </div>
         <div class="col-md-4 col-lg-4">
             <div class="widgetbar">
-                <button class="btn btn-primary"><i class="ri-refresh-line mr-2"></i>Refresh</button>
+                <button class="btn btn-primary"><i class="fas fa-ri-refresh-line mr-2" style="font-size:36px; color: red;"></i>Refresh</button>
             </div>
         </div>
     </div>
@@ -24,6 +24,7 @@
 <!-- End Breadcrumbbar -->
 <!-- Start Contentbar -->
 <div class="contentbar">
+    <!-- OG Content Notes
     <p>Refer to the <em>dashboard</em> page on <a href="https://lee486.shinyapps.io/AMNOW-ForecastingAnalytics/">Su-Ah's R Shiny mockup</a></p>
 
     <p>Show icons & totals for things that are valid for AMIP, some suggestions:</p>
@@ -39,6 +40,96 @@
     </ul>
 
     <p>Don't show a datatable of production data here, we do that elsewhere.</p>
+
+    End of OG Content Notes -->
+
+    <div class="box">
+        <div class="row">
+            <div class="col-sm-6 infocol">
+                <div class="infobox">
+                    <i class="fas fa-city" style="font-size: 36px; color: red;"> </i>
+                </div>
+                <div class="infobox">
+                    <p style="font-size: small; color: dimgray">Total suppliers</p>
+                    <h3>120</h3>
+                </div>
+            </div>
+            <div class="col-sm-6 infocol">
+                <div class="infobox">
+                    <i class="fas fa-chart-pie" style="font-size:36px; color: blue;">
+                    </i>
+                </div>
+                <div class="infobox">
+                    <p style="font-size: small; color: dimgray">Total parts produced</p>
+                    <h3>4,500</h3>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6 infocol">
+                <div class="infobox">
+                    <i class="fas fa-clipboard" style="font-size:36px; color: green;"></i>
+                </div>
+                <div class="infobox">
+                    <p style="font-size: small; color: dimgray">Total jobs</p>
+                    <h3>2,850</h3>
+                </div>
+            </div>
+            <div class="col-sm-6 infocol">
+                <div class="infobox">
+                    <i class="fas fa-cubes" style="font-size:36px; color: purple;">
+                    </i>
+                </div>
+                <div class="infobox">
+                    <p style="font-size: small; color: dimgray">Total printers</p>
+                    <h3>77</h3>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6 infocol">
+                <div class="infobox">
+                    <i class="fas fa-tools" style="font-size:36px; color: orange;">
+                    </i>
+                </div>
+                <div class="infobox">
+                    <p style="font-size: small; color: dimgray">Total equipment suppliers</p>
+                    <h3>48</h3>
+                </div>
+            </div>
+            <div class="col-sm-6 infocol">
+                <div class="infobox">
+                    <i class="fas fa-truck" style="font-size:36px; color: tomato;">
+                    </i>
+                </div>
+                <div class="infobox">
+                    <p style="font-size: small; color: dimgray">Average parts per supplier</p>
+                    <h3>540</h3>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6 infocol">
+                <div class="infobox">
+                    <i class="fas fa-map-marked" style="font-size:36px; color: turquoise;">
+                    </i>
+                </div>
+                <div class="infobox">
+                    <p style="font-size: small; color: dimgray">Total states represented by jobs</p>
+                    <h3>15</h3>
+                </div>
+            </div>
+            <div class="col-sm-6 infocol">
+                <div class="infobox">
+                    <i class="fas fa-sitemap" style="font-size:36px; color: darkmagenta;">
+                    </i>
+                </div>
+                <div class="infobox">
+                    <p style="font-size: small; color: dimgray">Average parts per supplier</p>
+                    <h3>250</h3>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 <!-- End Contentbar -->
-
