--- a/AmDataVizDemo/wwwroot/css/style.css
+++ b/AmDataVizDemo/wwwroot/css/style.css
@@ -1,6 +1,31 @@
-﻿.tabcontent.hidden {
+﻿.row {
+    margin: 0;
+}
+
+.box {
+    background: #fff;
+    border-top: 3px solid #d2d6de;
+    margin-bottom: 20px;
+    width: 100%;
+    box-shadow: 0 1px 1px rgba(0,0,0,.1);
+}
+
+.infocol {
+    padding: 10pt;
+    margin-bottom: 15px;
+    background: #fff;
+    box-shadow: 1px 1px 1px 1px rgb(0 0 0 / 5%);
+}
+
+.infobox {
+    padding: 5px;
+    display: inline-block;
+}
+
+.tabcontent.hidden {
     display: none;
 }
+
 .chart {
     width: 90%;
     height: 600px;
