Changed label names and icons to better fit categories

--- a/AmDataVizDemo/Views/Shared/_Layout.cshtml
+++ b/AmDataVizDemo/Views/Shared/_Layout.cshtml
@@ -9,6 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
     <title>NCDMM Data Visualization Demo</title>
     <!-- Favicon -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+
     <link rel="shortcut icon" href="~/olian/images/favicon.ico">
     <!-- Start theme css -->
     <!-- Switchery css -->
@@ -23,7 +25,6 @@
     <link href="~/olian/css/flag-icon.min.css" rel="stylesheet" type="text/css">
     <link href="~/olian/css/style.css" rel="stylesheet" type="text/css">
     <!-- End theme css -->
-
     <link href="~/css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body class="vertical-layout">
