--- a/AmDataVizDemo/Views/Home/Dashboard.cshtml
+++ b/AmDataVizDemo/Views/Home/Dashboard.cshtml
@@ -47,11 +47,11 @@
         <div class="row">
             <div class="col-sm-6 infocol">
                 <div class="infobox">
-                    <i class="fas fa-city" style="font-size: 36px; color: red;"> </i>
+                    <i class="fas fa-clipboard" style="font-size:36px; color: green;"></i>
                 </div>
                 <div class="infobox">
-                    <p style="font-size: small; color: dimgray">Total suppliers</p>
-                    <h3>120</h3>
+                    <p style="font-size: small; color: dimgray">Total jobs</p>
+                    <h3>2,850</h3>
                 </div>
             </div>
             <div class="col-sm-6 infocol">
@@ -68,21 +68,21 @@
         <div class="row">
             <div class="col-sm-6 infocol">
                 <div class="infobox">
-                    <i class="fas fa-clipboard" style="font-size:36px; color: green;"></i>
+                    <i class="fas fa-city" style="font-size: 36px; color: red;"> </i>
                 </div>
                 <div class="infobox">
-                    <p style="font-size: small; color: dimgray">Total jobs</p>
-                    <h3>2,850</h3>
+                    <p style="font-size: small; color: dimgray">Total suppliers</p>
+                    <h3>120</h3>
                 </div>
             </div>
             <div class="col-sm-6 infocol">
                 <div class="infobox">
-                    <i class="fas fa-cubes" style="font-size:36px; color: purple;">
+                    <i class="fas fa-truck" style="font-size:36px; color: tomato;">
                     </i>
                 </div>
                 <div class="infobox">
-                    <p style="font-size: small; color: dimgray">Total printers</p>
-                    <h3>77</h3>
+                    <p style="font-size: small; color: dimgray">Average jobs per supplier</p>
+                    <h3>540</h3>
                 </div>
             </div>
         </div>
@@ -99,12 +99,12 @@
             </div>
             <div class="col-sm-6 infocol">
                 <div class="infobox">
-                    <i class="fas fa-truck" style="font-size:36px; color: tomato;">
+                    <i class="fas fa-cubes" style="font-size:36px; color: purple;">
                     </i>
                 </div>
                 <div class="infobox">
-                    <p style="font-size: small; color: dimgray">Average parts per supplier</p>
-                    <h3>540</h3>
+                    <p style="font-size: small; color: dimgray">Total material suppliers</p>
+                    <h3>77</h3>
                 </div>
             </div>
         </div>
@@ -121,7 +121,7 @@
             </div>
             <div class="col-sm-6 infocol">
                 <div class="infobox">
-                    <i class="fas fa-sitemap" style="font-size:36px; color: darkmagenta;">
+                    <i class="fas fa-sitemap" style="font-size:36px; color: olive;">
                     </i>
                 </div>
                 <div class="infobox">
