--- a/AmDataVizDemo/Views/_ViewImports.cshtml
+++ b/AmDataVizDemo/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using AmDataVizDemo
 @using AmDataVizDemo.Models
+@using AmDataVizDemo.Models.ViewModels 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
