Removed in-line CSS to add into style.css

--- a/AmDataVizDemo/Views/Home/Dashboard.cshtml
+++ b/AmDataVizDemo/Views/Home/Dashboard.cshtml
@@ -16,7 +16,7 @@
         </div>
         <div class="col-md-4 col-lg-4">
             <div class="widgetbar">
-                <button class="btn btn-primary"><i class="fas fa-ri-refresh-line mr-2" style="font-size:36px; color: red;"></i>Refresh</button>
+                <button class="btn btn-primary"><i class="fas fa-ri-refresh-line mr-2" style= "color: red;"></i>Refresh</button>
             </div>
         </div>
     </div>
@@ -47,20 +47,20 @@
         <div class="row">
             <div class="col-sm-6 infocol">
                 <div class="infobox">
-                    <i class="fas fa-clipboard" style="font-size:36px; color: green;"></i>
+                    <i class="fas fa-clipboard" style="color: green;"></i>
                 </div>
                 <div class="infobox">
-                    <p style="font-size: small; color: dimgray">Total jobs</p>
+                    <p class = "infoP">Total jobs</p>
                     <h3>2,850</h3>
                 </div>
             </div>
             <div class="col-sm-6 infocol">
                 <div class="infobox">
-                    <i class="fas fa-chart-pie" style="font-size:36px; color: blue;">
+                    <i class="fas fa-chart-pie" style="color: blue;">
                     </i>
                 </div>
                 <div class="infobox">
-                    <p style="font-size: small; color: dimgray">Total parts produced</p>
+                    <p class = "infoP">Total parts produced</p>
                     <h3>4,500</h3>
                 </div>
             </div>
@@ -68,20 +68,20 @@
         <div class="row">
             <div class="col-sm-6 infocol">
                 <div class="infobox">
-                    <i class="fas fa-city" style="font-size: 36px; color: red;"> </i>
+                    <i class="fas fa-city" style="color: red;"> </i>
                 </div>
                 <div class="infobox">
-                    <p style="font-size: small; color: dimgray">Total suppliers</p>
+                    <p class = "infoP">Total suppliers</p>
                     <h3>120</h3>
                 </div>
             </div>
             <div class="col-sm-6 infocol">
                 <div class="infobox">
-                    <i class="fas fa-truck" style="font-size:36px; color: tomato;">
+                    <i class="fas fa-truck" style=" color: tomato;">
                     </i>
                 </div>
                 <div class="infobox">
-                    <p style="font-size: small; color: dimgray">Average jobs per supplier</p>
+                    <p class = "infoP">Average jobs per supplier</p>
                     <h3>540</h3>
                 </div>
             </div>
@@ -89,21 +89,21 @@
         <div class="row">
             <div class="col-sm-6 infocol">
                 <div class="infobox">
-                    <i class="fas fa-tools" style="font-size:36px; color: orange;">
+                    <i class="fas fa-tools" style="color: orange;">
                     </i>
                 </div>
                 <div class="infobox">
-                    <p style="font-size: small; color: dimgray">Total equipment suppliers</p>
+                    <p class = "infoP">Total equipment suppliers</p>
                     <h3>48</h3>
                 </div>
             </div>
             <div class="col-sm-6 infocol">
                 <div class="infobox">
-                    <i class="fas fa-cubes" style="font-size:36px; color: purple;">
+                    <i class="fas fa-cubes" style="color: purple;">
                     </i>
                 </div>
                 <div class="infobox">
-                    <p style="font-size: small; color: dimgray">Total material suppliers</p>
+                    <p class = "infoP">Total material suppliers</p>
                     <h3>77</h3>
                 </div>
             </div>
@@ -111,21 +111,21 @@
         <div class="row">
             <div class="col-sm-6 infocol">
                 <div class="infobox">
-                    <i class="fas fa-map-marked" style="font-size:36px; color: turquoise;">
+                    <i class="fas fa-map-marked" style=" color: turquoise;">
                     </i>
                 </div>
                 <div class="infobox">
-                    <p style="font-size: small; color: dimgray">Total states represented by jobs</p>
+                    <p class = "infoP">Total states represented by jobs</p>
                     <h3>15</h3>
                 </div>
             </div>
             <div class="col-sm-6 infocol">
                 <div class="infobox">
-                    <i class="fas fa-sitemap" style="font-size:36px; color: olive;">
+                    <i class="fas fa-sitemap" style=" color: olive;">
                     </i>
                 </div>
                 <div class="infobox">
-                    <p style="font-size: small; color: dimgray">Average parts per supplier</p>
+                    <p class = "infoP">Average parts per supplier</p>
                     <h3>250</h3>
                 </div>
             </div>
