--- a/AmDataVizDemo/wwwroot/css/style.css
+++ b/AmDataVizDemo/wwwroot/css/style.css
@@ -10,6 +10,9 @@
     box-shadow: 0 1px 1px rgba(0,0,0,.1);
 }
 
+.fas {
+    font-size: xx-large;
+}
 .infocol {
     padding: 10pt;
     margin-bottom: 15px;
@@ -20,6 +23,10 @@
 .infobox {
     padding: 5px;
     display: inline-block;
+}
+.infoP {
+    font-size: medium;
+    color: dimgray
 }
 
 .tabcontent.hidden {
