--- a/AmDataVizDemo/Views/Home/Dashboard.cshtml
+++ b/AmDataVizDemo/Views/Home/Dashboard.cshtml
@@ -47,7 +47,7 @@
         <div class="row">
             <div class="col-sm-6 infocol">
                 <div class="infobox">
-                    <i class="fas fa-clipboard" style="color: green;"></i>
+                    <i class="fas fa-clipboard"></i>
                 </div>
                 <div class="infobox">
                     <p class = "infoP">Total jobs</p>
@@ -56,7 +56,7 @@
             </div>
             <div class="col-sm-6 infocol">
                 <div class="infobox">
-                    <i class="fas fa-chart-pie" style="color: blue;">
+                    <i class="fas fa-chart-pie">
                     </i>
                 </div>
                 <div class="infobox">
@@ -68,7 +68,7 @@
         <div class="row">
             <div class="col-sm-6 infocol">
                 <div class="infobox">
-                    <i class="fas fa-city" style="color: red;"> </i>
+                    <i class="fas fa-city"> </i>
                 </div>
                 <div class="infobox">
                     <p class = "infoP">Total suppliers</p>
@@ -77,7 +77,7 @@
             </div>
             <div class="col-sm-6 infocol">
                 <div class="infobox">
-                    <i class="fas fa-truck" style=" color: tomato;">
+                    <i class="fas fa-truck">
                     </i>
                 </div>
                 <div class="infobox">
@@ -89,7 +89,7 @@
         <div class="row">
             <div class="col-sm-6 infocol">
                 <div class="infobox">
-                    <i class="fas fa-tools" style="color: orange;">
+                    <i class="fas fa-tools">
                     </i>
                 </div>
                 <div class="infobox">
@@ -99,7 +99,7 @@
             </div>
             <div class="col-sm-6 infocol">
                 <div class="infobox">
-                    <i class="fas fa-cubes" style="color: purple;">
+                    <i class="fas fa-cubes">
                     </i>
                 </div>
                 <div class="infobox">
@@ -111,7 +111,7 @@
         <div class="row">
             <div class="col-sm-6 infocol">
                 <div class="infobox">
-                    <i class="fas fa-map-marked" style=" color: turquoise;">
+                    <i class="fas fa-map-marked">
                     </i>
                 </div>
                 <div class="infobox">
@@ -121,7 +121,7 @@
             </div>
             <div class="col-sm-6 infocol">
                 <div class="infobox">
-                    <i class="fas fa-sitemap" style=" color: olive;">
+                    <i class="fas fa-sitemap">
                     </i>
                 </div>
                 <div class="infobox">
