Added datatables lib

--- a/AmDataVizDemo/Views/Shared/_Layout.cshtml
+++ b/AmDataVizDemo/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
     <link href="~/olian/css/style.css" rel="stylesheet" type="text/css">
     <!-- End theme css -->
 
+    <!-- DataTables css -->
+    <link rel="stylesheet" type="text/css" href="~/lib/jquery-dataTables/datatables.min.css" />
+
     <link href="~/css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body class="vertical-layout">
@@ -313,7 +316,6 @@
         <!-- End Rightbar -->
     </div>
     <!-- End Containerbar -->
-
     <!-- Start theme js -->
     <script src="~/olian/js/jquery.min.js"></script>
     <script src="~/olian/js/popper.min.js"></script>
@@ -334,7 +336,6 @@
     <!-- Core js -->
     <script src="~/olian/js/core.js"></script>
     <!-- End themejs -->
-
     <!--script src="~/lib/jquery/dist/jquery.min.js" asp-append-version="true"></!--script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js" asp-append-version="true"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" asp-append-version="true"></script-->
@@ -343,6 +344,9 @@
     <script src="https://code.highcharts.com/modules/exporting.js" asp-append-version="true"></script>
     <script src="https://code.highcharts.com/modules/export-data.js" asp-append-version="true"></script>
     <script src="https://code.highcharts.com/modules/accessibility.js" asp-append-version="true"></script>
+
+    <!-- DataTables js -->
+    <script type="text/javascript" src="~/lib/jquery-datatables/datatables.min.js"></script>
 
     <script src="~/js/site.js" asp-append-version="true"></script>
     <!--link rel="stylesheet" href="~/css/site.css" asp-append-version="true"-->
