adding Leaflet Map for the suppliers, and associated data

--- a/AmDataVizDemo/Views/Home/ProductionForecastCharts.cshtml
+++ b/AmDataVizDemo/Views/Home/ProductionForecastCharts.cshtml
@@ -25,6 +25,7 @@
 <!-- End Breadcrumbbar -->
 <!-- Start Contentbar -->
 <div class="contentbar">
+    <!-- OG Notes
     <p>Refer to the <em>Forecast</em> page and <em>Test Data</em> page on <a href="https://lee486.shinyapps.io/AMNOW-ForecastingAnalytics/">Su-Ah's R Shiny mockup</a></p>
 
     <p>The Shiny app Forecast page has 2 sections: production data charts, and then forecast charts.</p>
@@ -39,7 +40,7 @@
     </ul>
 
     <p>Refer to the forecast chart on the Test Data page. You may want to incorporate some elements of this.</p>
-
+    End of OG Notes--->
     <p>This simple example will return data + forecast data - open JS console to see data.</p>
     <div class="tab">
         <button class="tabforecast" id="forecast-arima" data-content="forecast-tabcontent">Forecast</button>
