--- a/AmDataVizDemo/Views/Shared/_ExampleLayout.cshtml
+++ b/AmDataVizDemo/Views/Shared/_ExampleLayout.cshtml
@@ -797,7 +797,6 @@
         <!-- End Rightbar -->
     </div>
     <!-- End Containerbar -->
-
     <!-- Start theme js -->
     <script src="~/olian/js/jquery.min.js"></script>
     <script src="~/olian/js/popper.min.js"></script>
@@ -818,15 +817,19 @@
     <!-- Core js -->
     <script src="~/olian/js/core.js"></script>
     <!-- End themejs -->
-
     <!--script src="~/lib/jquery/dist/jquery.min.js" asp-append-version="true"></!--script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js" asp-append-version="true"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" asp-append-version="true"></script-->
+        -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" asp-append-version="true"></script>
+
     <script src="https://code.highcharts.com/highcharts.js" asp-append-version="true"></script>
     <script src="https://code.highcharts.com/highcharts-more.js" asp-append-version="true"></script>
     <script src="https://code.highcharts.com/modules/exporting.js" asp-append-version="true"></script>
     <script src="https://code.highcharts.com/modules/export-data.js" asp-append-version="true"></script>
     <script src="https://code.highcharts.com/modules/accessibility.js" asp-append-version="true"></script>
+    <!-- leaflet map-->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.js" asp-append-version="true"></script>
 
     <script src="~/js/site.js" asp-append-version="true"></script>
     <!--link rel="stylesheet" href="~/css/site.css" asp-append-version="true"-->
