--- a/AmDataVizDemo/Views/Home/SupplierMap.cshtml
+++ b/AmDataVizDemo/Views/Home/SupplierMap.cshtml
@@ -1,37 +1,43 @@
 ﻿@{
     ViewData["Title"] = "Supplier Map";
 }
-
-<!-- Start Breadcrumbbar -->
-<div class="breadcrumbbar">
-    <div class="row align-items-center">
-        <div class="col-md-8 col-lg-8">
-            <h1 class="page-title">@ViewData["Title"]</h1>
-            <div class="breadcrumb-list">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="~/Home/Dashboard">Home</a></li>
-                    <li class="breadcrumb-item active" aria-current="page"><a href="~/Home/SupplierMap">@ViewData["Title"]</a></li>
-                </ol>
+    <!-- Start Breadcrumbbar -->
+    <div class="breadcrumbbar">
+        <div class="row align-items-center">
+            <div class="col-md-8 col-lg-8">
+                <h1 class="page-title">@ViewData["Title"]</h1>
+                <div class="breadcrumb-list">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="~/Home/Dashboard">Home</a></li>
+                        <li class="breadcrumb-item active" aria-current="page"><a href="~/Home/SupplierMap">@ViewData["Title"]</a></li>
+                    </ol>
+                </div>
             </div>
-        </div>
-        <div class="col-md-4 col-lg-4">
-            <div class="widgetbar">
-                <button class="btn btn-primary"><i class="ri-refresh-line mr-2"></i>Refresh</button>
+            <div class="col-md-4 col-lg-4">
+                <div class="widgetbar">
+                    <button class="btn btn-primary"><i class="ri-refresh-line mr-2"></i>Refresh</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
-<!-- End Breadcrumbbar -->
-<!-- Start Contentbar -->
-<div class="contentbar">
-
+    <!-- End Breadcrumbbar -->
+    <!-- Start Contentbar -->
+    <div class="contentbar">
+        <!-- OG Notes
     <p>Refer to the <em>Map</em> page on <a href="https://lee486.shinyapps.io/AMNOW-ForecastingAnalytics/">Su-Ah's R Shiny mockup</a></p>
-
     <p>Move the datatable below the map.</p>
     <p>Create a tabbed placeholder for multiple maps.</p>
     <p>Implement the supplier type map</p>
-
     <p>TBD: other maps.</p>
+      End of OG Notes   -->
 
-</div>
-<!-- End Contentbar -->
+        <div class="box">
+            <h2>Supplier Map</h2>
+            <p> Additional information about our suppliers.</p>
+        </div>
+        <div class="box">
+            <div id="map"></div>
+        </div>
+
+    </div>
+    <!-- End Contentbar -->
