--- a/AmDataVizDemo/Views/Shared/_Layout.cshtml
+++ b/AmDataVizDemo/Views/Shared/_Layout.cshtml
@@ -26,6 +26,10 @@
     <link href="~/olian/css/style.css" rel="stylesheet" type="text/css">
     <!-- End theme css -->
     <link href="~/css/style.css" rel="stylesheet" type="text/css">
+    <!-- leaflet css -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js" integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew==" crossorigin=""></script>
+
 </head>
 <body class="vertical-layout">
     <!-- Start Infobar Setting Sidebar -->
@@ -314,7 +318,6 @@
         <!-- End Rightbar -->
     </div>
     <!-- End Containerbar -->
-
     <!-- Start theme js -->
     <script src="~/olian/js/jquery.min.js"></script>
     <script src="~/olian/js/popper.min.js"></script>
@@ -335,7 +338,6 @@
     <!-- Core js -->
     <script src="~/olian/js/core.js"></script>
     <!-- End themejs -->
-
     <!--script src="~/lib/jquery/dist/jquery.min.js" asp-append-version="true"></!--script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js" asp-append-version="true"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" asp-append-version="true"></script-->
