--- a/AmDataVizDemo/Views/Home/SupplierMap.cshtml
+++ b/AmDataVizDemo/Views/Home/SupplierMap.cshtml
@@ -30,13 +30,26 @@
     <p>Implement the supplier type map</p>
     <p>TBD: other maps.</p>
       End of OG Notes   -->
-
         <div class="box">
             <h2>Supplier Map</h2>
             <p> Additional information about our suppliers.</p>
         </div>
-        <div class="box">
-            <div id="map"></div>
+        <!-- Tab links -->
+        <div class="tab">
+            <button class="tablinks" data-content="material-map-tabcontent">Supplier Material Map</button>
+            <button class="tablinks" data-content="equipment-map-tabcontent">Supplier Equipment Map</button>
+        </div>
+        <!-- Tab Content  -->
+        <div id="material-map-tabcontent" class="tabcontent hidden">
+            <div class="box">
+                <div id="materialMap"></div>
+            </div>
+        </div>
+
+        <div id="equipment-map-tabcontent" class="tabcontent hidden">
+            <div class="box">
+                <div id="equipmentMap"></div>
+            </div>
         </div>
 
     </div>
