--- a/AmDataVizDemo/wwwroot/css/style.css
+++ b/AmDataVizDemo/wwwroot/css/style.css
@@ -10,34 +10,57 @@
     box-shadow: 0 1px 1px rgba(0,0,0,.1);
 }
 
+.chart {
+    width: 90%;
+    height: 600px;
+}
+#materialMap {
+    width: 90%;
+    height: 500px;
+}
+#equipmentMap {
+    width: 90%;
+    height: 500px;
+}
+
+/* icon style */
 .fas {
     font-size: xx-large;
 }
-.fa-clipboard{
+
+.fa-clipboard {
     color: green
 }
-.fa-chart-pie{
+
+.fa-chart-pie {
     color: blue;
 }
+
 .fa-city {
     color: red;
 }
-.fa-truck{
+
+.fa-truck {
     color: tomato;
 }
-.fa-tools{
+
+.fa-tools {
     color: orange;
 }
-.fa-cubes{
+
+.fa-cubes {
     color: purple;
 }
-.fa-map-marked{
+
+.fa-map-marked {
     color: turquoise;
 }
-.fa-sitemap{
-    color:olive;
+
+.fa-sitemap {
+    color: olive;
 }
 
+/* infobox style */
 .infocol {
     padding: 10pt;
     margin-bottom: 15px;
@@ -49,21 +72,42 @@
     padding: 5px;
     display: inline-block;
 }
+
 .infoP {
     font-size: medium;
     color: dimgray
 }
-
-.tabcontent.hidden {
-    display: none;
+/* tab style */
+.tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
 }
 
-.chart {
-    width: 90%;
-    height: 600px;
+    .tab button {
+        background-color: inherit;
+        float: left;
+        border: none;
+        outline: none;
+        cursor: pointer;
+        padding: 14px 16px;
+        transition: 0.3s;
+    }
+
+        .tab button:hover {
+            background-color: #ddd;
+        }
+
+        .tab button.active {
+            background-color: #ccc;
+        }
+
+.tabcontent {
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
 }
 
-#map{
-    width: 90%;
-    height: 500px;
-}
+    .tabcontent.hidden {
+        display: none;
+    }
