--- a/AmDataVizDemo/wwwroot/css/style.css
+++ b/AmDataVizDemo/wwwroot/css/style.css
@@ -14,11 +14,7 @@
     width: 90%;
     height: 600px;
 }
-#materialMap {
-    width: 90%;
-    height: 500px;
-}
-#equipmentMap {
+#map, #materialMap, #equipmentMap {
     width: 90%;
     height: 500px;
 }
