Updated maps. 2 ways for layer control, radio buttons and off-map buttons.

--- a/AmDataVizDemo/Views/Home/SupplierMap.cshtml
+++ b/AmDataVizDemo/Views/Home/SupplierMap.cshtml
@@ -35,11 +35,12 @@
             <p> Additional information about our suppliers.</p>
         </div>
 
-        <!-- button toggles  -->
+        <!-- button toggles-->
         <div class="btn-group">
-            <button type="button" id="All" class="btn btn-success">All Suppliers</button>
-            <button type="button" id="MatMap" class="btn btn-primary">By Material</button>
-            <button type="button" id="TypeMap" class="btn btn-danger">By Type</button>
+            <button type="button" id="allSup" class="btn btn-success">All Suppliers</button>
+            <button type="button" id="BCer" class="btn btn-primary">Glass</button>
+            <button type="button" id="BMet" class="btn btn-danger">Metal</button>
+            <button type="button" id="BPol" class="btn btn-purple">Polymer</button>
         </div>
         <!-- actual map  -->
         <div class="box">
