applied rest of map filters and html table

--- a/AmDataVizDemo/Views/Home/SupplierMap.cshtml
+++ b/AmDataVizDemo/Views/Home/SupplierMap.cshtml
@@ -35,16 +35,37 @@
             <p> Additional information about our suppliers.</p>
         </div>
 
-        <!-- button toggles-->
+        <!-- button toggles -->
         <div class="btn-group">
-            <button type="button" id="allSup" class="btn btn-success">All Suppliers</button>
+            <button type="button" id="allSup" class="btn btn-dark">All Suppliers</button>
             <button type="button" id="BCer" class="btn btn-primary">Glass</button>
             <button type="button" id="BMet" class="btn btn-danger">Metal</button>
-            <button type="button" id="BPol" class="btn btn-purple">Polymer</button>
+            <button type="button" id="BPol" class="btn btn-info">Polymer</button>
+            <button type="button" id="BComp" class="btn btn-success">Composite</button>
+            <button type="button" id="BSan" class="btn btn-light">Sand</button>
+            <button type="button" id="BWax" class="btn btn-warning">Wax</button>
         </div>
+
         <!-- actual map  -->
         <div class="box">
             <div id="map"></div>
+        </div>
+
+        <!-- supplier table  -->
+        <div class="box">
+            <table id="SupplierTable">
+                <tr>
+                    <th>Company Name</th>
+                    <th>City</th>
+                    <th>State</th>
+                    <th>Zip</th>
+                    <th>Build Preparations</th>
+                    <th>City</th>
+                    <th>Part</th>
+                    <th>Material</th>
+                    <th>Type</th>
+                </tr>
+            </table>
         </div>
 
     </div>
