added comparison dropdown + sample charts. needs love.

--- a/AmDataVizDemo/Views/Home/ProductionComparison.cshtml
+++ b/AmDataVizDemo/Views/Home/ProductionComparison.cshtml
@@ -31,5 +31,11 @@
 
     <p>Do not compare one company to another.</p>
 
+    <div class="box">
+        <select id="ddSelect" name="emplist"> </select>
+        <div id="comparisonChart"></div>
+    </div>
+
+
 </div>
 <!-- End Contentbar -->
