added dropdown for compairson charts + one regional line

--- a/AmDataVizDemo/Views/Home/ProductionCharts.cshtml
+++ b/AmDataVizDemo/Views/Home/ProductionCharts.cshtml
@@ -37,7 +37,7 @@
     <div class="tab">
         <button class="tablinks" data-content="bar-chart-tabcontent">Bar Graph</button>
         <button class="tablinks" data-content="line-chart-tabcontent">Line Graph</button>
-        <button class="tablinks" data-content="box-plot-tabcontent">Box Plot</button>
+        <button class="tablinks" data-content="col-plot-tabcontent">Column Plot</button>
     </div>
 
     <!-- Tab content -->
@@ -55,10 +55,10 @@
         </div>
     </div>
 
-    <div id="box-plot-tabcontent" class="tabcontent hidden">
-        <h3>Box Plot</h3>
+    <div id="col-plot-tabcontent" class="tabcontent hidden">
+        <h3>Column Plot</h3>
         <div class="container-fluid">
-            <div id="boxplot" class="chart"></div>
+            <div id="column" class="chart"></div>
         </div>
     </div>
 
