adjusted dropdown for region

--- a/AmDataVizDemo/Views/Home/ProductionComparison.cshtml
+++ b/AmDataVizDemo/Views/Home/ProductionComparison.cshtml
@@ -32,7 +32,15 @@
     <p>Do not compare one company to another.</p>
 
     <div class="box">
-        <select id="ddSelect" name="emplist"> </select>
+        <select id="companySelect" name="CompanyList"> </select>
+        <select id="regionSelect" name="RegionList">
+            <option value="NE">Northeast</option>
+            <option value="S">South</option>
+            <option value="MW">Midwest</option>
+            <option value="SW">Southwest</option>
+            <option value="W">West</option>
+        </select>
+
         <div id="comparisonChart"></div>
     </div>
 
