--- a/AmDataVizDemo/Views/Home/TestCharts.cshtml
+++ b/AmDataVizDemo/Views/Home/TestCharts.cshtml
@@ -25,12 +25,15 @@
 <!-- End Breadcrumbbar -->
 <!-- Start Contentbar -->
 <div class="contentbar">
-
+    <!-- Start Contentbar
     <p>Refer to the <em>Test Data</em> page on <a href="https://lee486.shinyapps.io/AMNOW-ForecastingAnalytics/">Su-Ah's R Shiny mockup</a></p>
 
     <p>This page has 2 parts- some charts of test data, and a table of materials. Do not include the table of materials, we will do that elsewhere.</p>
 
     <p>This page should just chart any existing test data.</p>
+        -->
+
+
 
 </div>
 <!-- End Contentbar -->
