working testdata charts with selection dropdown

--- a/AmDataVizDemo/Views/Home/TestCharts.cshtml
+++ b/AmDataVizDemo/Views/Home/TestCharts.cshtml
@@ -32,7 +32,13 @@
 
     <p>This page should just chart any existing test data.</p>
         -->
+    <div class="box">
+        <select id="testSelect" name="testList">
+            <option value="none" selected disabled hidden> Select a Test </option>
+        </select>
 
+        <div id="TestChart"></div>
+    </div>
 
 
 </div>
